<resources>
    <string name="app_name">FrontPFM</string>
    <string name="username">Nom d utilisateur</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="email">Email</string>
    <string name="phone_number">Numero de téléphone</string>
    <string name="password">Mot de passe</string>
    <string name="log_in">Se connecter</string>
</resources>
